--- a/templates/email/order.handlebars
+++ b/templates/email/order.handlebars
@@ -98,6 +98,10 @@ p, ul, ol { font-size: 16px; font-weight: normal; margin-bottom: 20px; }
                                             <td> N {{subtotal}}</td>
                                         </tr>
                                         <tr>
+                                            <th colspan="3">Discount</th>
+                                            <td> N {{discount}}</td>
+                                        </tr>
+                                        <tr>
                                             <th colspan="3">Grand Total</th>
                                             <td>N {{total}}</td>
                                         </tr>
